20121206 - fhabermann
* using abstract rte class for ckeditor

20121203 - fhabermann
* initial version of ckeditor