@@ -6,7 +6,7 @@
 class CkeditorBootstrap extends Knowledgeroot_Module_Bootstrap_Abstract {
     public function _initCkeditor() {
 	// init ckeditor
-	$ckeditor = new CkeditorModule_Ckeditor();
+	$ckeditor = new Ckeditor();
 
 	// save ckeditor as default editor
 	Knowledgeroot_Registry::set('rte', $ckeditor);
