@@ -2,5 +2,6 @@
 bootstrap.path = "Bootstrap.php"
 bootstrap.class = "CkeditorBootstrap"
 lib.path = "lib";
+namespace = "Ckeditor"
 
 [ckeditor]
